--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #f5f8fa;
+$body-bg: #f9f9fb;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
@@ -9,11 +9,13 @@ $navbar-default-border: $laravel-border-color;
 $panel-default-border: $laravel-border-color;
 $panel-inner-border: $laravel-border-color;
 
+$c-logo: #ed7e85;
+
 // Brands
 $brand-primary: #3097D1;
 $brand-info: #8eb4cb;
-$brand-success: #2ab27b;
-$brand-warning: #cbb956;
+$brand-success: #25a69f;
+$brand-warning: #ed7e85;
 $brand-danger: #bf5329;
 
 // Typography
@@ -27,7 +29,7 @@ $text-color: #636b6f;
 $navbar-default-bg: #fff;
 
 // Buttons
-$btn-default-color: $text-color;
+$btn-default-color: #25a69f;
 
 // Inputs
 $input-border: lighten($text-color, 40%);
