--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -10,6 +10,7 @@ $panel-default-border: $laravel-border-color;
 $panel-inner-border: $laravel-border-color;
 
 $c-logo: #ed7e85;
+$c-status-bar: #CAEFE9;
 
 // Brands
 $brand-primary: #3097D1;
